// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock Data Shape Snapshots should snapshot Deal interface shape 1`] = `
{
  "author": "SnapshotUser",
  "cuisine": "Italian",
  "cuisineId": "cuisine-italian",
  "details": "50% off all items - test snapshot",
  "expirationDate": "2026-12-31",
  "id": "deal-snapshot-1",
  "image": {
    "uri": "https://example.com/deal-image.jpg",
  },
  "isAnonymous": false,
  "isDownvoted": false,
  "isFavorited": false,
  "isUpvoted": false,
  "milesAway": "1.5 mi",
  "restaurant": "Snapshot Restaurant",
  "restaurantAddress": "123 Snapshot St",
  "timeAgo": "2h ago",
  "title": "Snapshot Test Deal",
  "userDisplayName": "Snapshot User",
  "userId": "user-snapshot-1",
  "userProfilePhoto": "https://example.com/avatar.jpg",
  "votes": 42,
}
`;

exports[`Mock Data Shape Snapshots should snapshot RowCardData interface shape 1`] = `
{
  "dealCount": 5,
  "distance": "2.0 mi",
  "expiresIn": "3 days",
  "id": "row-snapshot-1",
  "image": {
    "uri": "https://example.com/row-image.jpg",
  },
  "postedDate": "Today",
  "subtitle": "Test subtitle for snapshot",
  "title": "Snapshot Row Card",
  "views": 100,
}
`;

exports[`UI Component Snapshots DealCard should match snapshot for anonymous post 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 30.53435114503817,
      "justifyContent": "flex-start",
      "opacity": 1,
      "padding": 15.267175572519085,
      "width": 363,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/deal-image.jpg",
      }
    }
    style={
      {
        "borderRadius": 15.267175572519085,
        "height": 332.46564885496184,
        "marginBottom": 15.267175572519085,
        "width": 332.46564885496184,
      }
    }
  />
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#000000",
        "fontFamily": "Inter",
        "fontSize": 22.900763358778626,
        "fontWeight": "600",
        "lineHeight": 28.625954198473284,
        "textAlign": "left",
        "width": 317.19847328244276,
      }
    }
  >
    Snapshot Test Deal
  </Text>
  <View
    style={
      {
        "marginBottom": 15.267175572519085,
        "width": 317.19847328244276,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Snapshot Restaurant
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Italian • 2h ago • 1.5 mi away
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7D7D7",
            "borderRadius": 30,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 53.4351145038168,
            "overflow": "hidden",
            "width": 162.21374045801528,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "paddingLeft": 15.267175572519085,
              "paddingRight": 3.816793893129771,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigUp"
        />
        <Text
          style={
            [
              {
                "color": "#212121",
              },
              {
                "color": "#000000",
                "fontFamily": "Inter",
                "fontSize": 19.083969465648856,
                "fontWeight": "400",
                "marginLeft": 7.633587786259542,
              },
            ]
          }
        >
          42
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#DEDEDE",
              "height": 22.900763358778626,
              "width": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "height": "100%",
              "justifyContent": "center",
              "paddingHorizontal": 19.083969465648856,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigDown"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7D7",
          "borderRadius": 30,
          "borderWidth": 1,
          "height": 53.4351145038168,
          "justifyContent": "center",
          "opacity": 1,
          "width": 76.33587786259542,
        }
      }
    >
      <View
        color="#000"
        name="mdi:heart-outline"
        size={36.25954198473283}
        testID="icon-mdi:heart-outline"
      />
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots DealCard should match snapshot for horizontal variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 19.083969465648856,
      "height": 531.9847328244275,
      "justifyContent": "center",
      "opacity": 1,
      "overflow": "visible",
      "paddingHorizontal": 15.267175572519085,
      "paddingVertical": 22.900763358778626,
      "width": 524.8091603053435,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/deal-image.jpg",
      }
    }
    style={
      {
        "borderRadius": 15.267175572519085,
        "height": 316.33587786259545,
        "marginBottom": 15.267175572519085,
        "resizeMode": "cover",
        "width": 494.2748091603054,
      }
    }
  />
  <View
    style={
      {
        "height": 38.16793893129771,
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#000000",
          "fontFamily": "Inter",
          "fontSize": 22.900763358778626,
          "fontWeight": "600",
          "height": 57.25190839694657,
          "lineHeight": 28.625954198473284,
          "textAlign": "left",
        }
      }
    >
      Snapshot Test Deal
    </Text>
  </View>
  <View
    style={
      {
        "marginBottom": 15.267175572519085,
        "width": "100%",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Snapshot Restaurant
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      1.5 mi
       away • 
      2h ago
       • By 
      SnapshotUser
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "overflow": "visible",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7D7D7",
            "borderRadius": 30,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 53.4351145038168,
            "overflow": "hidden",
            "width": 162.21374045801528,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "paddingLeft": 15.267175572519085,
              "paddingRight": 3.816793893129771,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigUp"
        />
        <Text
          style={
            [
              {
                "color": "#212121",
              },
              {
                "color": "#000000",
                "fontFamily": "Inter",
                "fontSize": 19.083969465648856,
                "fontWeight": "400",
                "marginLeft": 7.633587786259542,
              },
            ]
          }
        >
          42
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#DEDEDE",
              "height": 22.900763358778626,
              "width": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "height": "100%",
              "justifyContent": "center",
              "paddingHorizontal": 19.083969465648856,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigDown"
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "overflow": "visible",
          "width": 118.3206106870229,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7D7D7",
            "borderRadius": 30,
            "borderWidth": 1,
            "height": 53.4351145038168,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "visible",
            "paddingHorizontal": 22.900763358778626,
          }
        }
      >
        <View
          color="#000000"
          name="mdi:heart-outline"
          size={36.25954198473283}
          testID="icon-mdi:heart-outline"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots DealCard should match snapshot for vertical variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 30.53435114503817,
      "justifyContent": "flex-start",
      "opacity": 1,
      "padding": 15.267175572519085,
      "width": 363,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/deal-image.jpg",
      }
    }
    style={
      {
        "borderRadius": 15.267175572519085,
        "height": 332.46564885496184,
        "marginBottom": 15.267175572519085,
        "width": 332.46564885496184,
      }
    }
  />
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#000000",
        "fontFamily": "Inter",
        "fontSize": 22.900763358778626,
        "fontWeight": "600",
        "lineHeight": 28.625954198473284,
        "textAlign": "left",
        "width": 317.19847328244276,
      }
    }
  >
    Snapshot Test Deal
  </Text>
  <View
    style={
      {
        "marginBottom": 15.267175572519085,
        "width": 317.19847328244276,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Snapshot Restaurant
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Italian • 2h ago • 1.5 mi away
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7D7D7",
            "borderRadius": 30,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 53.4351145038168,
            "overflow": "hidden",
            "width": 162.21374045801528,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "paddingLeft": 15.267175572519085,
              "paddingRight": 3.816793893129771,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigUp"
        />
        <Text
          style={
            [
              {
                "color": "#212121",
              },
              {
                "color": "#000000",
                "fontFamily": "Inter",
                "fontSize": 19.083969465648856,
                "fontWeight": "400",
                "marginLeft": 7.633587786259542,
              },
            ]
          }
        >
          42
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#DEDEDE",
              "height": 22.900763358778626,
              "width": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "height": "100%",
              "justifyContent": "center",
              "paddingHorizontal": 19.083969465648856,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigDown"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7D7",
          "borderRadius": 30,
          "borderWidth": 1,
          "height": 53.4351145038168,
          "justifyContent": "center",
          "opacity": 1,
          "width": 76.33587786259542,
        }
      }
    >
      <View
        color="#000"
        name="mdi:heart-outline"
        size={36.25954198473283}
        testID="icon-mdi:heart-outline"
      />
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots DealCard should match snapshot when favorited 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 30.53435114503817,
      "justifyContent": "flex-start",
      "opacity": 1,
      "padding": 15.267175572519085,
      "width": 363,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/deal-image.jpg",
      }
    }
    style={
      {
        "borderRadius": 15.267175572519085,
        "height": 332.46564885496184,
        "marginBottom": 15.267175572519085,
        "width": 332.46564885496184,
      }
    }
  />
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#000000",
        "fontFamily": "Inter",
        "fontSize": 22.900763358778626,
        "fontWeight": "600",
        "lineHeight": 28.625954198473284,
        "textAlign": "left",
        "width": 317.19847328244276,
      }
    }
  >
    Snapshot Test Deal
  </Text>
  <View
    style={
      {
        "marginBottom": 15.267175572519085,
        "width": 317.19847328244276,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Snapshot Restaurant
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Italian • 2h ago • 1.5 mi away
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7D7D7",
            "borderRadius": 30,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 53.4351145038168,
            "overflow": "hidden",
            "width": 162.21374045801528,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "paddingLeft": 15.267175572519085,
              "paddingRight": 3.816793893129771,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigUp"
        />
        <Text
          style={
            [
              {
                "color": "#212121",
              },
              {
                "color": "#000000",
                "fontFamily": "Inter",
                "fontSize": 19.083969465648856,
                "fontWeight": "400",
                "marginLeft": 7.633587786259542,
              },
            ]
          }
        >
          42
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#DEDEDE",
              "height": 22.900763358778626,
              "width": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "height": "100%",
              "justifyContent": "center",
              "paddingHorizontal": 19.083969465648856,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigDown"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7D7",
          "borderRadius": 30,
          "borderWidth": 1,
          "height": 53.4351145038168,
          "justifyContent": "center",
          "opacity": 1,
          "width": 76.33587786259542,
        }
      }
    >
      <View
        color="#FF1E00"
        name="mdi:heart"
        size={36.25954198473283}
        testID="icon-mdi:heart"
      />
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots DealCard should match snapshot when upvoted 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 30.53435114503817,
      "justifyContent": "flex-start",
      "opacity": 1,
      "padding": 15.267175572519085,
      "width": 363,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/deal-image.jpg",
      }
    }
    style={
      {
        "borderRadius": 15.267175572519085,
        "height": 332.46564885496184,
        "marginBottom": 15.267175572519085,
        "width": 332.46564885496184,
      }
    }
  />
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#000000",
        "fontFamily": "Inter",
        "fontSize": 22.900763358778626,
        "fontWeight": "600",
        "lineHeight": 28.625954198473284,
        "textAlign": "left",
        "width": 317.19847328244276,
      }
    }
  >
    Snapshot Test Deal
  </Text>
  <View
    style={
      {
        "marginBottom": 15.267175572519085,
        "width": 317.19847328244276,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Snapshot Restaurant
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Italian • 2h ago • 1.5 mi away
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7D7D7",
            "borderRadius": 30,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 53.4351145038168,
            "overflow": "hidden",
            "width": 162.21374045801528,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "paddingLeft": 15.267175572519085,
              "paddingRight": 3.816793893129771,
            },
            undefined,
          ]
        }
      >
        <View
          color="#FF8C4C"
          fill="#FF8C4C"
          size={34}
          testID="lucide-ArrowBigUp"
        />
        <Text
          style={
            [
              {
                "color": "#212121",
              },
              {
                "color": "#000000",
                "fontFamily": "Inter",
                "fontSize": 19.083969465648856,
                "fontWeight": "400",
                "marginLeft": 7.633587786259542,
              },
            ]
          }
        >
          43
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#DEDEDE",
              "height": 22.900763358778626,
              "width": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "height": "100%",
              "justifyContent": "center",
              "paddingHorizontal": 19.083969465648856,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigDown"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7D7",
          "borderRadius": 30,
          "borderWidth": 1,
          "height": 53.4351145038168,
          "justifyContent": "center",
          "opacity": 1,
          "width": 76.33587786259542,
        }
      }
    >
      <View
        color="#000"
        name="mdi:heart-outline"
        size={36.25954198473283}
        testID="icon-mdi:heart-outline"
      />
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots DealCard should match snapshot with delete button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 30.53435114503817,
      "justifyContent": "flex-start",
      "opacity": 1,
      "padding": 15.267175572519085,
      "width": 363,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/deal-image.jpg",
      }
    }
    style={
      {
        "borderRadius": 15.267175572519085,
        "height": 332.46564885496184,
        "marginBottom": 15.267175572519085,
        "width": 332.46564885496184,
      }
    }
  />
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      {
        "color": "#000000",
        "fontFamily": "Inter",
        "fontSize": 22.900763358778626,
        "fontWeight": "600",
        "lineHeight": 28.625954198473284,
        "textAlign": "left",
        "width": 317.19847328244276,
      }
    }
  >
    Snapshot Test Deal
  </Text>
  <View
    style={
      {
        "marginBottom": 15.267175572519085,
        "width": 317.19847328244276,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Snapshot Restaurant
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#757575",
          "fontFamily": "Inter",
          "fontSize": 19.083969465648856,
          "fontWeight": "400",
          "lineHeight": 22.900763358778626,
          "textAlign": "left",
          "width": "100%",
        }
      }
    >
      Italian • 2h ago • 1.5 mi away
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7D7D7",
            "borderRadius": 30,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 53.4351145038168,
            "overflow": "hidden",
            "width": 162.21374045801528,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "paddingLeft": 15.267175572519085,
              "paddingRight": 3.816793893129771,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigUp"
        />
        <Text
          style={
            [
              {
                "color": "#212121",
              },
              {
                "color": "#000000",
                "fontFamily": "Inter",
                "fontSize": 19.083969465648856,
                "fontWeight": "400",
                "marginLeft": 7.633587786259542,
              },
            ]
          }
        >
          42
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#DEDEDE",
              "height": 22.900763358778626,
              "width": 1,
            },
            undefined,
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "height": "100%",
              "justifyContent": "center",
              "paddingHorizontal": 19.083969465648856,
            },
            undefined,
          ]
        }
      >
        <View
          color="#000000"
          fill="transparent"
          size={34}
          testID="lucide-ArrowBigDown"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7D7",
          "borderRadius": 30,
          "borderWidth": 1,
          "height": 53.4351145038168,
          "justifyContent": "center",
          "opacity": 1,
          "width": 76.33587786259542,
        }
      }
    >
      <View
        color="#000000"
        name="uil:trash-alt"
        size={30.53435114503817}
        testID="icon-uil:trash-alt"
      />
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots DealCardSkeleton should match snapshot for horizontal variant 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 10,
      "height": 280,
      "justifyContent": "center",
      "paddingHorizontal": 8,
      "paddingVertical": 12,
      "width": 545.4545454545454,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#E0E0E0",
        "borderRadius": 8,
        "height": 167,
        "marginBottom": 8,
        "opacity": 0.3,
        "width": 260,
      }
    }
  />
  <View
    style={
      {
        "height": 30,
        "justifyContent": "flex-start",
        "marginBottom": 8,
        "width": "100%",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 6,
          "height": 12,
          "marginBottom": 4,
          "opacity": 0.3,
          "width": "90%",
        }
      }
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#E0E0E0",
        "borderRadius": 4,
        "height": 24,
        "marginBottom": 8,
        "opacity": 0.3,
        "width": "100%",
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 30,
          "height": 28,
          "opacity": 0.3,
          "width": 80,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 30,
          "height": 28,
          "opacity": 0.3,
          "width": 62,
        }
      }
    />
  </View>
</View>
`;

exports[`UI Component Snapshots DealCardSkeleton should match snapshot for vertical variant 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "justifyContent": "flex-start",
      "padding": 8,
      "width": 363,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#E0E0E0",
        "borderRadius": 8,
        "height": 175,
        "marginBottom": 8,
        "opacity": 0.3,
        "width": "100%",
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#E0E0E0",
        "borderRadius": 4,
        "height": 30,
        "marginBottom": 8,
        "opacity": 0.3,
        "width": 339,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#E0E0E0",
        "borderRadius": 4,
        "height": 24,
        "marginBottom": 8,
        "opacity": 0.3,
        "width": 339,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 30,
          "height": 28,
          "opacity": 0.3,
          "width": 70,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 30,
          "height": 28,
          "opacity": 0.3,
          "width": 40,
        }
      }
    />
  </View>
</View>
`;

exports[`UI Component Snapshots RowCard should match snapshot for explore-deal-card variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "height": 96,
      "marginHorizontal": 12,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "paddingHorizontal": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        source={
          {
            "uri": "https://example.com/row-image.jpg",
          }
        }
        style={
          {
            "borderRadius": 8,
            "height": 80,
            "width": 80,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 4,
          "height": 76,
          "justifyContent": "center",
          "paddingRight": 8,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "stretch",
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "color": "#000000",
                "letterSpacing": -0.35,
                "lineHeight": 17,
              },
              {
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "600",
              },
            ]
          }
        >
          Snapshot Row Card
        </Text>
      </View>
      <View
        style={
          {
            "alignSelf": "stretch",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#757575",
              },
              {
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 16,
              },
            ]
          }
        >
          Posted 
          Yesterday
           • 
          2 days
           • 
          150
           views
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "justifyContent": "center",
          "minWidth": 20,
          "padding": 6,
          "paddingLeft": 5,
        }
      }
    >
      <Text />
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots RowCard should match snapshot for favorites-deal-card variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "height": 96,
      "marginHorizontal": 12,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "paddingHorizontal": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        source={
          {
            "uri": "https://example.com/row-image.jpg",
          }
        }
        style={
          {
            "borderRadius": 8,
            "height": 80,
            "width": 80,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 4,
          "justifyContent": "center",
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#000000",
              "letterSpacing": -0.35,
              "lineHeight": 17,
            },
            {
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontWeight": "600",
            },
          ]
        }
      >
        Snapshot Row Card
      </Text>
      <Text
        style={
          [
            {
              "color": "#757575",
            },
            {
              "fontFamily": "Inter",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
            },
          ]
        }
      >
        Test subtitle for snapshot
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "justifyContent": "center",
          "minWidth": 20,
          "padding": 6,
          "paddingLeft": 5,
        }
      }
    >
      <Text />
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots RowCard should match snapshot for rest-deal variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "height": 96,
      "marginHorizontal": 12,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "paddingHorizontal": 0,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        source={
          {
            "uri": "https://example.com/row-image.jpg",
          }
        }
        style={
          {
            "borderRadius": 8,
            "height": 80,
            "width": 80,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 4,
          "height": 76,
          "justifyContent": "center",
          "paddingRight": 8,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "stretch",
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            [
              {
                "color": "#000000",
                "letterSpacing": -0.35,
                "lineHeight": 17,
              },
              {
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "600",
              },
            ]
          }
        >
          Snapshot Row Card
        </Text>
      </View>
      <View
        style={
          {
            "alignSelf": "stretch",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#757575",
              },
              {
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 16,
              },
            ]
          }
        >
          0.5 mi
           • 
          3
           Deals
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "justifyContent": "center",
          "minWidth": 20,
          "padding": 6,
          "paddingLeft": 5,
        }
      }
    >
      <Text />
    </View>
  </View>
</View>
`;

exports[`UI Component Snapshots RowCardSkeleton should match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "height": 86,
      "marginHorizontal": 12,
      "marginVertical": 4,
      "padding": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 8,
          "height": 70,
          "opacity": 0.3,
          "width": 70,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 8,
          "justifyContent": "center",
          "paddingRight": 8,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#E0E0E0",
            "borderRadius": 4,
            "height": 14,
            "opacity": 0.3,
            "width": "80%",
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#E0E0E0",
            "borderRadius": 4,
            "height": 12,
            "opacity": 0.3,
            "width": "60%",
          }
        }
      />
    </View>
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 8,
          "height": 16,
          "opacity": 0.3,
          "width": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`UI Component Snapshots SkeletonLoader should match snapshot with custom dimensions 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#E0E0E0",
      "borderRadius": 8,
      "height": 40,
      "opacity": 0.3,
      "width": 200,
    }
  }
/>
`;

exports[`UI Component Snapshots SkeletonLoader should match snapshot with default props 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#E0E0E0",
      "borderRadius": 4,
      "height": 20,
      "opacity": 0.3,
      "width": "100%",
    }
  }
/>
`;

exports[`UI Component Snapshots SkeletonLoader should match snapshot with percentage width 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#E0E0E0",
      "borderRadius": 4,
      "height": 16,
      "opacity": 0.3,
      "width": "80%",
    }
  }
/>
`;

exports[`UI Component Snapshots VoteButtons should match snapshot for default state 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D7D7D7",
        "borderRadius": 30,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 53.4351145038168,
        "overflow": "hidden",
        "width": 162.21374045801528,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "paddingLeft": 15.267175572519085,
          "paddingRight": 3.816793893129771,
        },
        undefined,
      ]
    }
  >
    <View
      color="#000000"
      fill="transparent"
      size={34}
      testID="lucide-ArrowBigUp"
    />
    <Text
      style={
        [
          {
            "color": "#212121",
          },
          {
            "color": "#000000",
            "fontFamily": "Inter",
            "fontSize": 19.083969465648856,
            "fontWeight": "400",
            "marginLeft": 7.633587786259542,
          },
        ]
      }
    >
      10
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#DEDEDE",
          "height": 22.900763358778626,
          "width": 1,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "paddingHorizontal": 19.083969465648856,
        },
        undefined,
      ]
    }
  >
    <View
      color="#000000"
      fill="transparent"
      size={34}
      testID="lucide-ArrowBigDown"
    />
  </View>
</View>
`;

exports[`UI Component Snapshots VoteButtons should match snapshot when downvoted 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D7D7D7",
        "borderRadius": 30,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 53.4351145038168,
        "overflow": "hidden",
        "width": 162.21374045801528,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "paddingLeft": 15.267175572519085,
          "paddingRight": 3.816793893129771,
        },
        undefined,
      ]
    }
  >
    <View
      color="#000000"
      fill="transparent"
      size={34}
      testID="lucide-ArrowBigUp"
    />
    <Text
      style={
        [
          {
            "color": "#212121",
          },
          {
            "color": "#000000",
            "fontFamily": "Inter",
            "fontSize": 19.083969465648856,
            "fontWeight": "400",
            "marginLeft": 7.633587786259542,
          },
        ]
      }
    >
      9
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#DEDEDE",
          "height": 22.900763358778626,
          "width": 1,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "paddingHorizontal": 19.083969465648856,
        },
        undefined,
      ]
    }
  >
    <View
      color="#9796FF"
      fill="#9796FF"
      size={34}
      testID="lucide-ArrowBigDown"
    />
  </View>
</View>
`;

exports[`UI Component Snapshots VoteButtons should match snapshot when favorited 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D7D7D7",
        "borderRadius": 30,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 53.4351145038168,
        "overflow": "hidden",
        "width": 162.21374045801528,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "paddingLeft": 15.267175572519085,
          "paddingRight": 3.816793893129771,
        },
        undefined,
      ]
    }
  >
    <View
      color="#000000"
      fill="transparent"
      size={34}
      testID="lucide-ArrowBigUp"
    />
    <Text
      style={
        [
          {
            "color": "#212121",
          },
          {
            "color": "#000000",
            "fontFamily": "Inter",
            "fontSize": 19.083969465648856,
            "fontWeight": "400",
            "marginLeft": 7.633587786259542,
          },
        ]
      }
    >
      10
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#DEDEDE",
          "height": 22.900763358778626,
          "width": 1,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "paddingHorizontal": 19.083969465648856,
        },
        undefined,
      ]
    }
  >
    <View
      color="#000000"
      fill="transparent"
      size={34}
      testID="lucide-ArrowBigDown"
    />
  </View>
</View>
`;

exports[`UI Component Snapshots VoteButtons should match snapshot when upvoted 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D7D7D7",
        "borderRadius": 30,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 53.4351145038168,
        "overflow": "hidden",
        "width": 162.21374045801528,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "paddingLeft": 15.267175572519085,
          "paddingRight": 3.816793893129771,
        },
        undefined,
      ]
    }
  >
    <View
      color="#FF8C4C"
      fill="#FF8C4C"
      size={34}
      testID="lucide-ArrowBigUp"
    />
    <Text
      style={
        [
          {
            "color": "#212121",
          },
          {
            "color": "#000000",
            "fontFamily": "Inter",
            "fontSize": 19.083969465648856,
            "fontWeight": "400",
            "marginLeft": 7.633587786259542,
          },
        ]
      }
    >
      11
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#DEDEDE",
          "height": 22.900763358778626,
          "width": 1,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "paddingHorizontal": 19.083969465648856,
        },
        undefined,
      ]
    }
  >
    <View
      color="#000000"
      fill="transparent"
      size={34}
      testID="lucide-ArrowBigDown"
    />
  </View>
</View>
`;

exports[`UI Component Snapshots VoteButtons should match snapshot with all states active 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D7D7D7",
        "borderRadius": 30,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 53.4351145038168,
        "overflow": "hidden",
        "width": 162.21374045801528,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "paddingLeft": 15.267175572519085,
          "paddingRight": 3.816793893129771,
        },
        undefined,
      ]
    }
  >
    <View
      color="#FF8C4C"
      fill="#FF8C4C"
      size={34}
      testID="lucide-ArrowBigUp"
    />
    <Text
      style={
        [
          {
            "color": "#212121",
          },
          {
            "color": "#000000",
            "fontFamily": "Inter",
            "fontSize": 19.083969465648856,
            "fontWeight": "400",
            "marginLeft": 7.633587786259542,
          },
        ]
      }
    >
      15
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#DEDEDE",
          "height": 22.900763358778626,
          "width": 1,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "paddingHorizontal": 19.083969465648856,
        },
        undefined,
      ]
    }
  >
    <View
      color="#000000"
      fill="transparent"
      size={34}
      testID="lucide-ArrowBigDown"
    />
  </View>
</View>
`;
